DevOps/Kubernetes/Марко Лукша - Kubernetes в действии/5. Service/3. Ingress/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: kubia.example.com  # этот ingress увязывает доменное имя kubia.example.com с вашей службой
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubia-nodeport
                port:
                  number: 80
